<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="titleDetail"
            type="com.ikran.movieinfo.data.TitleDetail" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/detailPosterView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        android:scaleType="centerCrop"
                        app:imageUrl="@{titleDetail.poster}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/poster"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/detailTitleYearView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/container_padding"
                        android:padding="@dimen/view_top_margin"
                        android:paddingStart="@dimen/view_top_margin"
                        android:paddingEnd="@dimen/view_top_margin"
                        android:text="@{titleDetail.year}"
                        android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="@string/year" />

                    <TextView
                        android:id="@+id/detailTitleNameView"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="@dimen/container_padding"
                        android:paddingStart="@dimen/view_top_margin"
                        android:paddingEnd="@dimen/view_top_margin"
                        android:text="@{titleDetail.title}"
                        android:textAppearance="@style/TextAppearance.MovieInfo.Title"
                        app:layout_constraintBottom_toTopOf="@id/detailTitleYearView"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="@string/title" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/container_padding"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/detailActorsTitle"
                app:layout_constraintTop_toBottomOf="@+id/detailActorsTitle">

                <!-- Vertical Guidelines -->

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.30" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_right"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.60" />

                <!-- Genre -->

                <TextView
                    android:id="@+id/detailGenreTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintEnd_toStartOf="@id/guideline_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailGenreTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{titleDetail.genre}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintEnd_toStartOf="@id/guideline_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailGenreTitle"
                    tools:text="Horror" />

                <!-- Running time -->

                <TextView
                    android:id="@+id/detailRunningTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/runtime"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintEnd_toStartOf="@id/guideline_right"
                    app:layout_constraintStart_toEndOf="@id/guideline_left"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailRunningTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{titleDetail.runtime}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintEnd_toStartOf="@id/guideline_right"
                    app:layout_constraintStart_toEndOf="@id/guideline_left"
                    app:layout_constraintTop_toBottomOf="@id/detailRunningTitle"
                    tools:text="123 min" />

                <!-- Ratings  -->

                <TextView
                    android:id="@+id/detailRatingTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline_right"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detailRatingTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{titleDetail.imdbRating}"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/guideline_right"
                    app:layout_constraintTop_toBottomOf="@id/detailRatingTitle"
                    tools:text="6.9/10" />

                <!-- Summary (Plot) -->

                <TextView
                    android:id="@+id/detailPlotTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_top_margin"
                    android:text="@string/plot"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailGenreTextView" />

                <TextView
                    android:id="@+id/detailPlotTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_top_margin"
                    android:text="@{titleDetail.plot}"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailPlotTitle"
                    tools:text="@string/plot_long" />

                <!-- Critics  review -->

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/imdb"
                    android:textAlignment="viewStart"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintEnd_toStartOf="@id/guideline_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/detailPlotTextView"
                    tools:layout_editor_absoluteX="1dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@string/imdb"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    android:textAlignment="viewStart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/detailDirectorsTitle"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="@id/guideline_left"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/rot"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toStartOf="@id/guideline_right"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/detailPlotTextView"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="@string/rot"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toStartOf="@id/guideline_right"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/guideline_left"
                    app:layout_constraintTop_toBottomOf="@+id/detailDirectorsTitle" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/meta"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@id/guideline_right"
                    app:layout_constraintTop_toBottomOf="@id/detailPlotTextView" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@string/meta"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@id/guideline_right"
                    app:layout_constraintTop_toBottomOf="@id/textView5" />



                <!-- Director -->

                <TextView
                    android:id="@+id/detailDirectorsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/director"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView2" />

                <TextView
                    android:id="@+id/detailDirectorsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_top_margin"
                    android:text="@{titleDetail.director}"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailDirectorsTitle"
                    tools:text="@string/director_long" />


                <!-- Writers -->

                <TextView
                    android:id="@+id/detailWritersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/writer"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailDirectorsTextView" />

                <TextView
                    android:id="@+id/detailWritersTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_top_margin"
                    android:text="@{titleDetail.writer}"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailWritersTitle"
                    tools:text="@string/writer_string_long" />

                <!-- Actors -->

                <TextView
                    android:id="@+id/detailActorsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/actors"
                    android:textAppearance="@style/TextAppearance.MovieInfo.SubTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailWritersTextView" />

                <TextView
                    android:id="@+id/detailActorsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_top_margin"
                    android:text="@{titleDetail.actors}"
                    android:textAppearance="@style/TextAppearance.MovieInfo.Value"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/detailActorsTitle"
                    tools:text="@string/actors_long" />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>